# safecrypt

./: .env  .gitignore  LICENSE  README.md  main.py  new_key.txt  pyproject.toml
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  Atm.jsx  Generator.jsx  Scanner.jsx
