[project]
name = "safecrypt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=49.0.0",
    "fastapi>=0.139.0",
    "httpx",
    "pillow",
    "pytest",
    "python-dotenv>=1.2.2",
    "qrcode>=8.2",
    "uvicorn>=0.51.0",
]
